# monidelecmvp

./: .gitignore  DOCKER.md  README.md  deploy.sh  docker-compose.prod.yml  env.prod.example  init-letsencrypt.sh
backend/: .env.example  .gitignore  Dockerfile.prod  README.md  mikro-orm.config.ts  package-lock.json  package.json  tsconfig.json
backend/baml_client/: async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
backend/baml_src/: main.baml
backend/src/: app.controller.ts  app.module.ts  main.ts  mikro-orm.config.ts
backend/src/migrations/: .snapshot-postgres.json  Migration20240612_AddNumberOfPeopleToProjects.ts  Migration20241201000000.ts  Migration20250110000000_AddAnalysisResults.ts  Migration20250110000001_AddProjectRooms.ts  Migration20250115000000_AddProjectFields.ts  Migration20250118000000_AddQuotes.ts  Migration20250127000000_AddCascadeDeleteToQuotes.ts  Migration20250524120000_InitialSchema.ts  Migration20250607134210.ts  Migration20250608000000.ts  Migration20250609000000.ts  Migration20250609133928_add-project-equipment-table.ts  Migration20250609140121_add-cascade-delete-constraints.ts  Migration20250621144044_AddDimensioningDataToProjects.ts  Migration20250622093607.ts
compliance_engine/: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py  start_server.py
compliance_engine/ontologies/: nfc15100_ontology.ttl
compliance_engine/shapes/: nfc15100_shapes.ttl
compliance_engine/src/compliance_engine/: __init__.py  config.py  main.py  middleware.py  models.py  validators.py
frontend/: .env  .env.example  .prettierrc  Dockerfile.prod  README.md  index.html  lint-staged.json  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/api-specs/: open-api-v1.json
frontend/scripts/: README.md  update-api-spec.js
frontend/src/: App.tsx  main.tsx  setupFetchInterceptors.ts
frontend/src/components/: DashboardLayout.tsx  LoadingOverlay.tsx  Logo.tsx  ScrollToTop.tsx  Sidebar.tsx
frontend/src/config/: paths.ts
frontend/src/contexts/: SubscriptionContext.tsx
frontend/src/lib/: query.ts  stripe.ts  supabase.ts
frontend/src/routes/: AppRouter.tsx  ProtectedAppLayout.tsx  ProtectedRoute.tsx  PublicAppLayout.tsx  PublicRoute.tsx  protected.tsx  public.tsx
(+282 files in other folders)
